--- a/angular.rangeSlider.css
+++ b/angular.rangeSlider.css
@@ -177,7 +177,12 @@
   padding: 5px 0 0 0;
   font-size: 12px;
   color: #999;
+  display: none;
 }
+
+.ngrs-range-slider .ngrs-value.ngrs-focus {
+  display: inline;
+  }
 /* line 190, scss/angular.rangeSlider.scss */
 .ngrs-range-slider .ngrs-value.ngrs-value-max {
   left: auto;
