--- a/angular.rangeSlider.css
+++ b/angular.rangeSlider.css
@@ -121,16 +121,35 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  background-color: #2f96b4;
+  background-color: #7ed5ef;
   background-image: -webkit-linear-gradient(#5bc0de, #2f96b4);
   background-image: -moz-linear-gradient(#5bc0de, #2f96b4);
   background-image: -o-linear-gradient(#5bc0de, #2f96b4);
   background-image: linear-gradient(#5bc0de, #2f96b4);
 }
+
+/* line 107, scss/angular.rangeSlider.scss */
+.ngrs-range-slider .ngrs-buffer {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 0;
+  right: 100%;
+  height: 8px;
+  margin: -4px -113px 0 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background-color: #80cc28;
+  background-image: -webkit-linear-gradient(#73B824, #66A320);
+  background-image: -moz-linear-gradient(#73B824, #66A320);
+  background-image: -o-linear-gradient(#73B824, #66A320);
+  background-image: linear-gradient(#73B824, #66A320);
+}
 /* line 125, scss/angular.rangeSlider.scss */
 .ngrs-range-slider .ngrs-handle {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   height: 100%;
   width: auto;
   margin: 0 0 0 -9px;
@@ -140,6 +159,7 @@
   -moz-border-radius: 3px;
   border-radius: 3px;
   padding:0 3px 0px 3px;
+  cursor: pointer;
   /*------------------------------------*\
       HANDLE ICON
   \*------------------------------------*/
@@ -178,6 +198,7 @@
   font-size: 12px;
   color: #999;
   white-space: nowrap;
+  cursor: pointer;
   
 }
 
@@ -346,6 +367,11 @@
 }
 /* line 388, scss/angular.rangeSlider.scss */
 .ngrs-range-slider.disabled .ngrs-join {
+  background: #ddd;
+}
+
+/* line 388, scss/angular.rangeSlider.scss */
+.ngrs-range-slider.disabled .ngrs-buffer {
   background: #ddd;
 }
 /* line 392, scss/angular.rangeSlider.scss */
